--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Expensify</title>
+        <title>Indecision App</title>
     </head>
     <body>
         <div id="app"></div>
